@@ -1,7 +1,7 @@
 /*
  * $Id$
  *
- * Copyright 2017 Allen D. Ball.  All rights reserved.
+ * Copyright 2017, 2018 Allen D. Ball.  All rights reserved.
  */
 package ball.http.annotation;
 
@@ -11,19 +11,21 @@ import java.lang.annotation.Target;
 
 import static ball.util.StringUtil.NIL;
 import static java.lang.annotation.ElementType.METHOD;
+import static java.lang.annotation.ElementType.PARAMETER;
 import static java.lang.annotation.ElementType.TYPE;
 import static java.lang.annotation.RetentionPolicy.RUNTIME;
 
 /**
- * {@link java.lang.annotation.Annotation} to provide multiple
- * {@link PathParameter} specifications.
+ * {@link java.lang.annotation.Annotation} to an interface method parameter
+ * as an URI path parameter.
  *
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  * @version $Revision$
  */
 @Documented
 @Retention(RUNTIME)
-@Target({ TYPE, METHOD })
-public @interface PathParameters {
-    PathParameter[] value();
+@Target({ METHOD, TYPE, PARAMETER })
+public @interface PathParam {
+    String name() default NIL;
+    String value() default NIL;
 }
