@@ -1,13 +1,13 @@
 /*
  * $Id$
  *
- * Copyright 2017 Allen D. Ball.  All rights reserved.
+ * Copyright 2017, 2018 Allen D. Ball.  All rights reserved.
  */
 package ball.http.annotation.processing;
 
 import ball.annotation.ServiceProviderFor;
 import ball.annotation.processing.For;
-import ball.http.annotation.URIParameter;
+import ball.http.annotation.HostParam;
 import javax.annotation.processing.Processor;
 import javax.annotation.processing.RoundEnvironment;
 import javax.lang.model.element.Element;
@@ -16,21 +16,21 @@ import javax.lang.model.element.TypeElement;
 import static javax.tools.Diagnostic.Kind.ERROR;
 
 /**
- * {@link URIParameter} parameter {@link java.lang.annotation.Annotation}
+ * {@link HostParam} parameter {@link java.lang.annotation.Annotation}
  * {@link Processor}
  *
  * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
  * @version $Revision$
  */
 @ServiceProviderFor({ Processor.class })
-@For({ URIParameter.class })
-public class URIParameterProcessor
+@For({ HostParam.class })
+public class HostParamProcessor
              extends ProtocolMethodParameterAnnotationProcessor {
 
     /**
      * Sole constructor.
      */
-    public URIParameterProcessor() { super(); }
+    public HostParamProcessor() { super(); }
 
     @Override
     public void process(RoundEnvironment roundEnv,
